--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
    </div>
    </section>
  <img src="Animated GIF.gif" alt="yea">
- <h3>Maybe later on in life imy</h3>
+ <h3>Maybe later on in life</h3>
 </body>
+
 </html>
